dev: migrate app to Java 25 preview with structured concurrency